@@ -21,6 +21,7 @@ require 'tc_presence'
 require 'vcard/tc_iqvcard'
 require 'roster/tc_iqqueryroster'
 require 'roster/tc_xroster'
+require 'roster/tc_helper'
 require 'version/tc_iqqueryversion'
 require 'version/tc_helper'
 require 'tc_streamSend'
